docs: added  auth option for demos
