# docs/swagger.json
@@ -1,7 +1,10 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "API for accessing RHS Schedule Data",
+        "title": "RHS Schedule Engine API",
+        "contact": {},
+        "version": "1.0"
     },
     "paths": {
         "/api/v1/auth/login": {
@@ -532,6 +535,14 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "Type \"Bearer\" followed by a space and a JWT token",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
